# avrrc

./: .gitignore  README.md  model_settings.h  rx.ino  tx-mega.ino  tx.ino
.github/workflows/: cmake-multi-platform.yml
manager/: README.md  avrrc-manager-gui.py  avrrc-manager.py
manager/manager-cpp/: CMakeLists.txt
manager/manager-cpp/resources/: app.rc
manager/manager-cpp/src/: FleetManager.cpp  fleetmanager.cpp  fleetmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_settings.h
simple_tx/: README.md
